align playlist fix version

--- a/public/style.css
+++ b/public/style.css
@@ -9,19 +9,38 @@
     color: #1C2833;
 }
 body{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; 
 	min-height: 100vh;
 	background: #1C2833;
-	display: grid;
+	
+    
 }
+@media (max-width: 600px) {
+    .box {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: flex-start;
+    }
+  }
 .main{
+    margin-top: 40px;
+    margin-bottom: 40px;
 	position: relative;
 	width: 400px;
+    min-width: 400px;
+    max-width: 450px;
 	height: 550px;
 	border-radius: 18px;
 	background: #566573;
 	overflow: hidden;
     right: -20%;
     top:10%;
+    transform: translate(-25%,-10%);
 }
 .main .top_bar .options{
 	display: flex;
@@ -149,10 +168,10 @@ body{
 /*playlist songs*/
 .playlist{
 	position: absolute;
-	bottom: 0;
+	bottom: 5%;
 	z-index: 10;
 	width: 100%;
-	height: 100%;
+	height: 80%;
 	background: #566573;
 	max-height: 0px;
 	overflow: hidden;
@@ -162,8 +181,9 @@ body{
 	flex-direction: column;
 }
 .main .active{
-	max-height: 100vh;
-	padding: 100px 0 0 0;
+	max-height: 80vh;
+	
+    
 }
 .playlist .p_song{
     position: relative;
